scss/_header.scss
.header {
  position: relative;
  width: 100vw;
  min-height: 50rem;
  background: url(../img/header_background.png) center top / 100% 50rem
    no-repeat;
  margin: 0;
  padding: 0;
}

.header__container {
  position: fixed;
  top: 0%;
  left: 0%;
  width: 100vw;
  max-width: 100vw;
  padding: 0 10%;
  height: 4.2rem;
  background: url(../img/header_background.png) center top / 100% 50rem
    no-repeat;
  opacity: 0.9;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: center;
  z-index: 100;
}

.header__container.sticky {
  box-shadow: 0 0 1rem #756bf9;
}

.header__navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header__menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 4.375rem;
  margin: 0;

  .menu__item {
    // margin-left: 5rem;

    .menu__link {
      @extend %nav_menu;

      padding: 0 0 0 1.2rem;
      transition: ease-in-out 0.2s;
      background: url(../img/svg/dot_transparent.svg) left center / 0.5rem
        no-repeat;

      &:hover {
        background: url(../img/svg/dot_white.svg) left center / 0.5rem no-repeat;
      }

      &:focus {
        background: url(../img/svg/dot_white.svg) left center / 0.5rem no-repeat;
      }

      &:active {
        background: url(../img/svg/dot_white.svg) left center / 0.5rem no-repeat;
      }
    }
  }
}

.hamburger {
  border: none;
  background-color: transparent;
  display: none;
  margin: 0 0 0 2rem;

  .logo-item:nth-child(2) {
    display: none;
  }
}

.header__socials {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1.25rem;
  margin: 0;

  & li {
    transition: ease-in-out 0.2s;
  }

  & li:hover {
    scale: 1.1;
  }

  & li:focus {
    scale: 1.1;
  }

  & li:active {
    scale: 1.1;
  }
}

// mobile
@media only screen and (max-width: 1200px) {
  .header__menu {
    visibility: hidden;
    position: fixed;
    left: -100%;
    top: 4rem;
    padding: 3rem 0 0 0;
    flex-direction: column;
    justify-content: start;
    width: 100vw;
    text-align: center;
    transition: 0.3s;
    overflow: auto;
    background: rgba(85, 183, 255, 1) url(../img/svg/burger_background.svg)
      center bottom / contain no-repeat;
    transition: ease-in-out 0.2s;
  }

  .header__menu.active {
    visibility: visible;
    left: 0;

    .menu__item {
      margin: 0 0 3rem 0;

      .menu__link {
        font-size: 1.5rem;

        padding: 0 0 0 2rem;
        transition: ease-in-out 0.2s;
        background: url(../img/svg/dot_transparent.svg) left center / 1rem
          no-repeat;

        &:hover {
          background: url(../img/svg/dot_white.svg) left center / 1rem no-repeat;
        }

        &:focus {
          background: url(../img/svg/dot_white.svg) left center / 1rem no-repeat;
        }

        &:active {
          background: url(../img/svg/dot_white.svg) left center / 1rem no-repeat;
        }
      }
    }
  }

  .hamburger {
    display: block;
    svg {
      fill: rgba($color: #ffffff, $alpha: 0.9);
    }
  }

  .hamburger.active .logo-item:nth-child(1) {
    display: none;
  }
  .hamburger.active .logo-item:nth-child(2) {
    display: block;
    svg {
      fill: rgba($color: #ffffff, $alpha: 0.9);
    }
  }

  .header__socials {
    display: none;
  }
}

// slider

.conveyor {
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);

  //smooth appearance
  animation-name: open;
  animation-duration: 4s;
  animation-iteration-count: 1;
  animation-direction: normal;
  animation-timing-function: ease-out;
  animation-fill-mode: forwards;
  animation-delay: 0s;

  @keyframes open {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }
}

.header__conveyor {
  width: 90%;
  padding: 0 5rem;
  height: fit-content;

  @media only screen and (max-width: 1200px) {
    padding: 0 1rem;
  }

  .title__big {
    @extend %header_slide_title;

    @media only screen and (max-width: 1200px) {
      font-size: 2.5rem;
      line-height: 3.5rem;
    }
  }

  .title__small {
    @extend %header_slide_subtitle;
  }

  @media only screen and (max-width: 1200px) {
    width: 90%;
  }
}

.slider {
  min-width: 0;
}

.slick-list {
  overflow: hidden;
}

.slick-dots {
  position: absolute;
  top: 0%;
  left: 100%;
  transform: rotate(0deg);

  li {
    list-style: none;
    padding: 0.7rem 0;

    @media screen and (max-width: 1200px) {
      padding: 0.3rem 0;
    }
  }

  button {
    font-size: 0;
    width: 0.5rem;
    height: 0.5rem;
    background: url(../img/svg/dot_transparent.svg) center center / contain
      no-repeat;
    border: none;
  }
}
.slick-active {
  button {
    background: url(../img/svg/dot_white.svg) center center / contain no-repeat;
  }
}
.slick-track {
  display: flex;
}

// bottom button
.header__button {
  position: absolute;
  left: 50%;
  top: 85%;
  transform: translate(-50%, -50%);
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  color: transparent;
  border: none;
  background: url(../img/svg/arrow_down.svg) center center / contain no-repeat;
  transition: ease-in-out 0.2s;

  &:hover {
    scale: 1.1;
    transform: translate(-45%, -45%);
  }

  &:focus {
    scale: 1.1;
    transform: translate(-45%, -45%);
  }

  &:active {
    scale: 1.2;
    transform: translate(-40%, -40%);
  }
}

